--- a/ekaw2016/css/custom.css
+++ b/ekaw2016/css/custom.css
@@ -65,3 +65,20 @@ html.img-right {
   background-color: rgba(255,0,0,0.5);
   margin-left: -120px !important;
 }
+
+.left {
+  left:-8.33%;
+  text-align: left;
+  float: left;
+  width:50%;
+  z-index:-10;
+}
+
+.right {
+  left:31.25%;
+  top: 75px;
+  float: right;
+  text-align: right;
+  z-index:-10;
+  width:50%;
+}
